statum-macros/tests/ui/invalid_machine_not_struct.stderr
error: expected `struct`
 --> tests/ui/invalid_machine_not_struct.rs:9:1
  |
9 | enum NotAStruct {
  | ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_machine_not_struct.rs:11:2
   |
11 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_machine_not_struct.rs`
